<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Learn Flow</string>
    <string name="icon">icon</string>
    <string name="save_credentials">Se souvenir de moi</string>
    <string name="email" tools:ignore="ExtraTranslation">Email</string>
    <string name="password" tools:ignore="ExtraTranslation">Mot de passe</string>
    <string name="create_account_cta">Vous n\'avez pas de compte ?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_user_type_title" tools:ignore="ExtraTranslation">Vous êtes un...</string>
    <string name="student">Élève</string>
    <string name="teacher">Professeur</string>
    <string name="name">Nom</string>
    <string name="last_name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="birthdate">Date de naissance</string>
    <string name="login">Se connecter</string>
    <string name="login_cta">Vous avez déjà un compte ?</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="home_city">Ville de résidence</string>
    <string name="street">Rue</string>
    <string name="zip_code">Code postal</string>
    <string name="further_address">Complément d\'adresse</string>
    <string name="select_school_level">Sélectionnez votre niveau scolaire</string>
    <string name="upload_identity_card_cta">Veuillez insérer une pièce d’identité</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_teacher_documents_desc">Veuillez insérer une photo des diplômes que vous possédez ou tout autre document pouvant attester de votre capacité d’enseignement</string>
    <string name="add_document">Ajouter un document</string>
    <string name="close">Fermer</string>
    <string name="delete">Supprimer</string>
    <string name="validate">Valider</string>
    <string name="required_field">Ce champs est requis</string>
    <string name="invalid_email">Adresse email invalide</string>
    <string name="invalid_date">Date invalide</string>
    <string name="invalid_phone_number">Numéro de téléphone invalide</string>
    <string name="choose_password">Choisissez un mot de passe</string>
    <string name="invalid_password">Vous devez insérer entre 8 et 25 caractères</string>
    <string name="register_success">Votre demande d’inscription a bien été prise en compte !</string>
    <string name="validate_register">Veuillez valider votre inscription</string>
    <string name="insert_profile_picture">Insérez une photo de profil qui apparaîtra sur l’application</string>
    <string name="nav_bar_search">Rechercher</string>
    <string name="nav_bar_messages">Messages</string>
    <string name="search_teacher_cta">Recherchez une matière, un professeur...</string>
    <string name="an_error_occured">Une erreur est survenue</string>
    <string name="teacher_signup_confirmation_title">Votre demande d’inscription a bien été prise en compte !</string>
    <string name="teacher_signup_confirmation_title_2">Vous ne pouvez pas vous connecter pour le moment.</string>
    <string name="teacher_signup_confirmation_desc">Veuillez attendre que notre équipe de modération valide votre inscription. Nous vous enverrons une notification lorsque la décision aura été prise.</string>
    <string name="cta_search">Recherchez un professeur</string>
    <string name="no_result_for_query">Aucun résultat ne correspond à votre recherche</string>
    <string name="signup_teacher_school_subjects">Sélectionnez la ou les matières que vous souhaitez enseigner et indiquez votre nombre d’année d’expérience</string>
    <string name="one">1</string>
    <string name="profile">Profil</string>
    <string name="retry">Réessayer</string>
    <string name="profile_student_title">Votre profil</string>
    <string name="nav_bar_profile">Profil</string>
    <string name="profile_firstname">"Prénom : %1$s"</string>
    <string name="profile_lastname">Nom : %1$s</string>
    <string name="profile_school_level">Niveau scolaire : %1$s</string>
    <string name="profile_phone_number">N° de téléphone : %1$s</string>
    <string name="profile_address">Adresse : %1$s</string>
</resources>