<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.learnflow.ui.search.SearchTeacherFragment"
        android:label="@string/nav_bar_search"
        tools:layout="@layout/fragment_search_teacher" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.learnflow.ui.messages.MessagesFragment"
        android:label="@string/nav_bar_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.learnflow.ui.profile.student.StudentProfileFragment"
        android:label="@string/nav_bar_profile"
        tools:layout="@layout/fragment_student_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_activity_main"
            app:destination="@id/activity_main" />
    </fragment>

    <activity
        android:id="@+id/activity_main"
        android:name="com.example.learnflow.MainActivity"
        android:label="MainActivity"
        tools:layout="@layout/activity_main" />

</navigation>