<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp">

        <TextView
            style="@style/tvBoldTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_signup_confirmation_title"
            android:textAlignment="center" />

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            card_view:cardCornerRadius="100dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo" />
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/tvBoldTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:text="@string/teacher_signup_confirmation_title_2"
            android:textAlignment="center" />

        <TextView
            style="@style/tvSubtitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/teacher_signup_confirmation_desc"
            android:textAlignment="center" />

    </LinearLayout>

    <com.example.learnflow.components.CustomBtn
        android:id="@+id/btnBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="Retour à l’écran de connexion" />

</LinearLayout>